# mcsGraph

./: .RData  .cproject  .project
RScript/: drawMCS.R  test.R
src/: CMakeLists.txt  lineGraph.cpp  mcs.cpp  modularProd.cpp
